--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title></title>
-</head>
-<body>
-<nav>
-    <ul>
-        <li><a href ="/events">All Events</a></li>
-    </ul>
-</nav>
+
+<head th:replace="fragments :: head"></head>
+
+<body class="container">
+<h1>Coding Events</h1>
+<nav th:replace="fragments :: navigation"></nav>
 </body>
 </html>
